--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-
+<h1>Hello Coursera ! Sorry nothing was here the first time...</h1>
 </body>
 </html>
